# hest-radiomics

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.legacy/: pyproject.toml
docs/: conf.py  index.md  installation.md  requirements.txt
docs/gettingstart/: configuration.md  installation.md  quickstart.md  stepbystep.md
docs/outputs/: overview.md  segment.md
src/hestradiomics/: _download_hest.py  _extract.py  _segment.py  _statistics.py  _visualize.py  config.py  run.py
src/hestradiomics/analysis/: __init__.py  statistics.py  visualize_patches.py  visualize_segment.py
src/hestradiomics/extract/: __init__.py  _intensity_texture.py  pipeline.py
src/hestradiomics/extractors/: __init__.py  _cell_distribution.py  _shape.py  builders.py  patch_processor.py  postprocess.py
src/hestradiomics/hest/: __init__.py  download.py  geneset.py
src/hestradiomics/segment/: __init__.py  adapter.py  io.py  pipeline.py  visualize.py
src/hestradiomics/utils/: __init__.py  config.py  feature_utils.py  h5.py  io.py  maskgeo.py  patchio.py  paths.py
