[build-system]
requires = ["setuptools>=61,<66", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hestradiomics"
version = "1.0.0"
description = "Pipeline for radiomics feature extraction and analysis from HEST dataset with WSI patches."
requires-python = ">=3.10"

dependencies = [
    # core
    "numpy>=1.24,<2.0.0",
    "pandas>=1.5",
    "pyyaml",
    "tqdm",

    # io
    "h5py",
    "pyarrow",
    "gdown",

    # imaging
    "Pillow",
    "opencv-python",
    "SimpleITK",

    # radiomics
    "pyradiomics==3.0.1",

    # spatial / geometry
    "shapely",
    "geopandas",

    # visualization
    "matplotlib",

    # bio / st
    "anndata",
    "scanpy",

    # utilities
    "python-dotenv",
    "huggingface-hub",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
